@@ -1,3 +1,8 @@
+2006-02-10  J. Tang  <tang@jtang.org>
+
+	* PagesManager man page: clarified [add] behavior and default
+	state [bug 1305988]
+
 2006-02-08  J. Tang  <tang@jtang.org>
 
 	* combobox.tcl: allow -autocomplete with uppercase chars [bug
